-- 2023.10.13 - V1.3.0

- Added customization option to rank scoreboard tags
- Added save mechanism toplist to show actual data for all online players
- Fixed multiple harmless error log for dictionary

-- 2023.10.13 - V1.2.0

- Added max rank and current rank id to !rank
- Added player count to toplist
- Upgraded save mechanism
- Upgraded data storing mechanism
- Upgraded point setter mechanism
- Fixed missing VIP multiplier sections
- Fixed several minor bug
- Cleaned and refactored the full code